# vie-bot

./: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  ids.txt  pyproject.toml  vie.py
src/vie_bot/: __main__.py  api.py  config.py  discord.py  scheduler.py  storage.py
